--- a/app/src/main/res/layout/cell.xml
+++ b/app/src/main/res/layout/cell.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#ffffff"
+    android:layout_width="140dp"
+    android:layout_height="140dp"
     android:orientation="vertical">
     
     <ImageView
         android:id="@+id/img"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:adjustViewBounds="true" 
+        android:layout_height="120dp"
+        android:adjustViewBounds="true"
+        android:layout_margin="10dp"
         />
     
     <TextView
